Fix CrashDumpManager reporting

file_size was never being set, so OOMs were being reported for normal
foreground crashes.

This CL removes file_size in favor of just using |status| to identify
empty crash dumps.

Unfortunately, this would have been caught if a TODO to beef up the
testing infrastructure had been done. This CL implements those changes
required to regression test this bug.

Bug: 846165
Change-Id: Ibf272588af4029887792bffec509e0fbdfe9f63b
Reviewed-on: https://chromium-review.googlesource.com/1070794
Reviewed-by: Siddhartha S <ssid@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562694}
Former-commit-id: 96a994dc4bef97e7295dc0126dcfe73cf822fdab